# vesicle-html-to-markdown

./: .gitignore  README.md  TBD_notes.md  pyproject.toml
src/html_to_markdown/: __init__.py  converter.py
tests/: test_html_to_markdown.py  test_public_api.py
