[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "vesicle-html-to-markdown"
version = "0.1.0"
description = "HTML to Markdown conversion library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/html_to_markdown"]
